--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,26 @@
   border: 1px solid #ccc;
   border-radius: 6px;
 }
+.task-list {
+  /* border: 1px solid rgb(194, 191, 191);
+  border-radius: 4px;
+  padding: 30px; */
+  height: 400px;
+  overflow: scroll;
+}
+.items {
+  padding: 16px;
+  border: 1px solid rgb(194, 191, 191);
+  border-radius: 4px;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+}
+/* @media (min-width: 700px) {
+  .task-list {
+    border: 1px solid rgb(194, 191, 191);
+    border-radius: 4px;
+    padding: 30px;
+    height: 400px;
+    overflow: scroll;
+  }
+} */
