--- a/src/App.css
+++ b/src/App.css
@@ -9,22 +9,18 @@
   /* border: 1px solid rgb(194, 191, 191);
   border-radius: 4px;
   padding: 30px; */
-  height: 400px;
+  height: 450px;
+  width: 700px;
   overflow: scroll;
+  scrollbar-width: none;
+  border-radius: 4px;
+  /* margin: 20px 0px; */
 }
 .items {
   padding: 16px;
-  border: 1px solid rgb(194, 191, 191);
+  border-bottom: 1px solid rgb(194, 191, 191);
   border-radius: 4px;
   margin-bottom: 15px;
   flex-wrap: wrap;
+  border: 1px solid rgb(194, 191, 191);
 }
-/* @media (min-width: 700px) {
-  .task-list {
-    border: 1px solid rgb(194, 191, 191);
-    border-radius: 4px;
-    padding: 30px;
-    height: 400px;
-    overflow: scroll;
-  }
-} */
