--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  height: 100%;
+  width: 100%;
+  background-color: #202d48 !important;
+}
 .dropdown-container select.form-select {
   max-width: 200px;
   padding: 8px;
@@ -5,22 +10,16 @@
   border: 1px solid #ccc;
   border-radius: 6px;
 }
-.task-list {
-  /* border: 1px solid rgb(194, 191, 191);
-  border-radius: 4px;
-  padding: 30px; */
-  height: 450px;
-  width: 700px;
+.data-list {
+  max-height: 450px;
   overflow: scroll;
-  scrollbar-width: none;
-  border-radius: 4px;
-  /* margin: 20px 0px; */
+  scrollbarwidth: none;
 }
-.items {
-  padding: 16px;
-  border-bottom: 1px solid rgb(194, 191, 191);
-  border-radius: 4px;
-  margin-bottom: 15px;
-  flex-wrap: wrap;
-  border: 1px solid rgb(194, 191, 191);
+
+@media (min-width: 1300px) {
+  .data-list {
+    max-height: 520px !important;
+    overflow: auto;
+    scrollbar-width: none;
+  }
 }
